# subscription_service/docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/subscription": {
             "get": {
-                "description": "Возвращает все подписки",
+                "description": "Возвращает список всех подписок",
                 "produces": [
                     "application/json"
                 ],
@@ -41,7 +41,7 @@
                 }
             },
             "post": {
-                "description": "Создаёт новую подписку пользователю",
+                "description": "Создает новую подписку",
                 "consumes": [
                     "application/json"
                 ],
@@ -54,7 +54,7 @@
                 "summary": "Создать подписку",
                 "parameters": [
                     {
-                        "description": "Subscription",
+                        "description": "Данные подписки",
                         "name": "subscription",
                         "in": "body",
                         "required": true,
@@ -96,24 +96,24 @@
         },
         "/subscription/total": {
             "get": {
-                "description": "Считает сумму всех подписок за период с фильтрами",
+                "description": "Считает суммарную стоимость подписок с фильтрами",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "subscriptions"
                 ],
-                "summary": "Общая сумма подписок",
+                "summary": "Общая стоимость подписок",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Начало периода (MM-YYYY)",
+                        "description": "Дата начала (01-2006)",
                         "name": "date_from",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Конец периода (MM-YYYY)",
+                        "description": "Дата конца (01-2006)",
                         "name": "date_to",
                         "in": "query"
                     },
@@ -137,6 +137,15 @@
                             "type": "object",
                             "additionalProperties": {
                                 "type": "integer"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
                             }
                         }
                     },
@@ -178,6 +187,15 @@
                             "$ref": "#/definitions/subscriptionservice.Subscription"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -217,8 +235,8 @@
                     "204": {
                         "description": "No Content"
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -238,7 +256,7 @@
                 }
             },
             "patch": {
-                "description": "Обновляет существующую подписку по ID",
+                "description": "Обновляет существующую подписку",
                 "consumes": [
                     "application/json"
                 ],
@@ -258,7 +276,7 @@
                         "required": true
                     },
                     {
-                        "description": "Данные для обновления",
+                        "description": "Обновленные данные подписки",
                         "name": "subscription",
                         "in": "body",
                         "required": true,
@@ -279,15 +297,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
